--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <%= favicon_link_tag('favi.ico') %>
-    <title>保活をちょっと楽にするサイト『With You』</title>
+    <title>保活のサイト『Mochi mochi』</title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
