--- a/app/views/nurseries/about.html.erb
+++ b/app/views/nurseries/about.html.erb
@@ -1,22 +1,71 @@
 <%= render 'shared/header', search: @search %>
-<div class="img-area">
-	
-</div>
+<!-- <div class="img-area"></div> -->
 <div class="body-content">
 	<div class="about-img"></div>
+	<div>
+		<p class="about-text">
+			「乳幼児がもちもちしていなかったら、人類はとっくの昔に育児が嫌になって滅んでいたかもしれないな」
+			<br>
+			<br>娘のほっぺをもちもちしながら、そんなことをよく考えました。
+			<br>子育てって大変ですね。毎日、家事と育児で手いっぱいなのに、その上、保育園を探すのは一苦労です。
+			<br>ほしい情報はみんな似たり寄ったりなんだから、一か所にまとめておけばいいのに
+			<br>せめてマップとメモ書くくらいひとつのサイトでできたらいいのに
+			<br>『Mochi mochi』は、そこらへんの母親が保活中に感じた「～だったらいいのに」を、そこらへんの母親なりに形にしたサイトです。
+			<br>まだまだ発展途上のサイトですが、ほんの少しでも誰かのお役に立てたら幸いです。
+		</p>
+	</div>
+	<div class="list-head">
+		<h4 class="mochimochi-text">Mochi mochiでできること</h4>
+	</div>
 	<div class="container-fluid">
     	<div class="row">
-    		<div class="list-head">
-				<h2 class="h2"></h2>
+			<div class="col-md-6">
+				<div class="about-box about-box1">
+					<h4 class="about-h4">保育園マップ</h4>
+					<i class="far fa-map about-i"></i>
+					<p class="about-text">保育園の一覧がマップで確認できます。</p>
+				</div>
 			</div>
-			<div class="about-box"><p class="about-box-p h3">1.保育園の位置をマップで確認</p><div class="about-img1"></div></div>
-			<div class="about-box"><p class="about-box-p h3">2.自宅からの距離と移動時間(徒歩)を表示</p><div class="about-img2"></div></div>
-			<div class="about-box"><p class="about-box-p h3">3.気になる保育園をマイリストに登録</p><div class="about-img3"></div></div>
-			<div class="about-box"><p class="about-box-p h3">4.並び順を変更できます。</p><div class="about-img4"></div></div>
-			<div class="about-box"><p class="about-box-p h3">5.登録した保育園には、メモを書くことができます。</p><div class="about-img5"></div></div>
-			<div class="about-box"><p class="about-box-p h3">6.自宅以外の位置情報「スポット」を登録</p><div class="about-img6"></div></div>
-			<div class="about-box"><p class="about-box-p h3">7.登録したスポットとの位置関係を確認</p><div class="about-img7"></div></div>
+			<div class="col-md-6">
+				<div class="about-box about-box2">
+					<h4 class="about-h4">保育園の詳細</h4>
+					<i class="far fa-file-alt about-i"></i>
+					<p class="about-text">保育園の住所、電話番号、開所日時を確認できます。<br>自宅を登録すると、自宅からの距離・時間が見られます。
+					</p>
+				</div>
+			</div>
 		</div>
-
+		<div class="row">
+			<div class="col-md-4">
+				<div class="about-box about-box3">
+					<h4 class="about-h4">マイリスト</h4>
+					<i class="far fa-heart about-i"></i>
+					<p class="about-text">気に入った保育園を登録しましょう。</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="about-box about-box4">
+					<h4 class="about-h4">メモ機能</h4>
+					<i class="fas fa-font about-i"></i>
+					<p class="about-text">気になったことや補足を書いておきましょう。</p>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div class="about-box about-box5">
+					<h4 class="about-h4">スポット</h4>
+					<i class="fab fa-pagelines about-i"></i>
+					<p class="about-text">自宅・自宅以外の位置情報を登録できます。</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="list-head">
+		<h4 class="mochimochi-text">Mochi mochiの注意点</h4>
+	</div>
+	<div>
+		<p class="about-text">
+			サイト内の情報は全て一個人が、保育園の公式サイトから引用抜粋したものです。
+			<br>誤字脱字、勘違いによる記載ミス、もろもろ存在するかもしれません。ご了承ください。
+		</p>
 	</div>
 </div>
