--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,6 @@
-<footer>
-  <div class="footer-top">
+<footer class="footer">
+  <div class="footer-wrapper">
+      <div class="footer-top">
     <div class="footer-content clearfix">
       <%= link_to "home", root_path, class: "footer-item" %>
       <%= link_to "about", about_path, class: "footer-item" %>
@@ -9,5 +10,7 @@
     <div class="footerimg"></div>
     <p class="copyright">©mizuki-saito.</p>
   </div>
+  </div>
+
 
 </footer>
