--- a/app/views/shared/_nurseryshow.html.erb
+++ b/app/views/shared/_nurseryshow.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 
-  <div class="col-sm-5">
+  <div class="col-sm-4">
     <div class="nursery-box nursery-box-left1">
       <div class="tell-box">
         <% if phone.present? %>
@@ -9,7 +9,9 @@
         <% end %>
       </div>
     </div>
+  </div>
 
+  <div class="col-sm-8">
     <div class="nursery-box nursery-box-left2">
       <h4 class="nursery-box-right-h4">info</h4>
       <table class="table">
@@ -36,7 +38,7 @@
   </div>
 
 
-  <div class="col-sm-7">
+  <div class="col-sm-12">
     <div class="nursery-box nursery-box-right">
       <h4 class="nursery-box-right-h4">保育料</h4>
       <% nursery.prices.each do |price| %>
