--- a/app/views/shared/_nurseryshow.html.erb
+++ b/app/views/shared/_nurseryshow.html.erb
@@ -3,6 +3,7 @@
   <div class="col-sm-4">
     <div class="nursery-box nursery-box-left1">
       <div class="tell-box">
+         <h4 class="nursery-box-right-h4">Tell</h4>
         <% if phone.present? %>
         <a class="tell fas fa-phone" href="tel:<%= phone %>"><span class="tell"><%= nursery.phone %>-<%= nursery.phone_middle %>-<%= nursery.phone_right %></span></a>
         <!-- スマホのときのみ発信できるように書き換える? -->
